2010-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>

	Try to solve the problem of spurious EOF chars in long lines of text
	sent to interactive subprocesses.
	* sysdep.c (child_setup_tty): Do not enable ICANON any more.
	(system_process_attributes): Remove unused var `ttotal'.
	* process.c (send_process): Don't bother breaking long line with EOF
	chars when talking to ttys any more.
	(wait_reading_process_output): Output a warning when called in such
	a way that it could block without being interruptible.

	Try to detect file modification within the same second.
	* buffer.h (struct buffer): New field modtime_size.
	* buffer.c (reset_buffer): Initialize it.
	* fileio.c (Finsert_file_contents, Fwrite_region): Set it.
	(Fverify_visited_file_modtime): Check it.
	(Fclear_visited_file_modtime, Fset_visited_file_modtime): Clear it.
	(Fset_visited_file_modtime): Set (or clear) it.

2010-04-12  Stefan Monnier  <monnier@iro.umontreal.ca>

	* process.c (status_notify): Remove unused var `ro'.

2010-04-12  Jan Djärv  <jan.h.d@swipnet.se>

	* xfns.c (select_visual): Don't call error if XGetVisualInfo returns
	more than one visual (Bug#5938).

2010-04-12  Dan Nicolaescu  <dann@ics.uci.edu>

	* Makefile.in (C_SWITCH_SYSTEM,C_SWITCH_MACHINE,C_SWITCH_X_SITE): Undefine.

2010-04-11  Dan Nicolaescu  <dann@ics.uci.edu>

	Remove C_SWITCH_SYSTEM_TEMACS.
	* s/darwin.h (C_SWITCH_SYSTEM_TEMACS): Remove.
	(malloc, realloc, free): Use emacs, not temacs for conditional
	definition.

	* Makefile.in (C_SWITCH_SYSTEM_TEMACS): Remove.
	(ALL_CFLAGS): Do not use C_SWITCH_SYSTEM_TEMACS.

	Use autoconf, not cpp for some variables.
	* Makefile.in (C_SWITCH_SYSTEM, C_SWITCH_MACHINE)
	(C_SWITCH_X_SITE): Define using autoconf, not cpp.
	(ALL_CFLAGS): Use them as make variables.
	(really-lwlib, really-oldXMenu): Do not pass them.

2010-04-11  Jan Djärv  <jan.h.d@swipnet.se>

	* xmenu.c (apply_systemfont_to_dialog): New.
	(create_and_show_dialog): Call apply_systemfont_to_dialog if HAVE_XFT.
