@@ -1,5 +1,7 @@
 2010-04-13  Stefan Monnier  <monnier@iro.umontreal.ca>
 
+	* term.c (init_tty): Move common text outside of #ifdef TERMINFO.
+
 	Try to solve the problem of spurious EOF chars in long lines of text
 	sent to interactive subprocesses.
 	* sysdep.c (child_setup_tty): Do not enable ICANON any more.
